--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
     "name": "ani-friend",
-    "version": "1.0.33",
+    "version": "1.0.34",
     "description": "A tool that makes animations a breeze.",
     "main": "./dist/Ani.js",
     "scripts": {
         "build": "webpack -p --env.production",
         "watch": "webpack-dev-server"
     },
+    "files": [
+        "README.md",
+        "LICENSE",
+        "lib/Ani.js",
+        "lib/Ani.js.map"
+    ],
     "repository": {
         "type": "git",
         "url": "https://github.com/UseAllFive/ani-friend.git"
