--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "ani-friend",
-    "version": "1.0.34",
+    "version": "1.0.36",
     "description": "A tool that makes animations a breeze.",
-    "main": "./dist/Ani.js",
+    "main": "./lib/Ani.js",
     "scripts": {
         "build": "webpack -p --env.production",
         "watch": "webpack-dev-server"
