--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "ani-friend",
-    "version": "1.0.36",
+    "version": "1.0.37",
     "description": "A tool that makes animations a breeze.",
-    "main": "./lib/Ani.js",
+    "main": "lib/Ani.js",
     "scripts": {
         "build": "webpack -p --env.production",
         "watch": "webpack-dev-server"
@@ -11,7 +11,8 @@
         "README.md",
         "LICENSE",
         "lib/Ani.js",
-        "lib/Ani.js.map"
+        "lib/Ani.js.map",
+        "modules"
     ],
     "repository": {
         "type": "git",
