--- a/package.json
+++ b/package.json
@@ -1,19 +1,12 @@
 {
     "name": "ani-friend",
-    "version": "1.0.37",
+    "version": "1.0.402",
     "description": "A tool that makes animations a breeze.",
-    "main": "lib/Ani.js",
+    "main": "./lib/Ani.js",
     "scripts": {
         "build": "webpack -p --env.production",
         "watch": "webpack-dev-server"
     },
-    "files": [
-        "README.md",
-        "LICENSE",
-        "lib/Ani.js",
-        "lib/Ani.js.map",
-        "modules"
-    ],
     "repository": {
         "type": "git",
         "url": "https://github.com/UseAllFive/ani-friend.git"
