--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "ani-friend",
-    "version": "1.1.14",
+    "version": "1.1.11",
     "description": "A tool that makes animations a breeze.",
     "main": "lib/ani-friend.min.js",
     "scripts": {
         "build": "webpack -p --env.production",
         "watch": "webpack-dev-server --env.development",
-        "publish": "npm run build; npm version patch; npm publish"
+        "release": "npm run build; npm version patch; npm publish"
     },
     "repository": {
         "type": "git",
