--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "webpack -p --env.production",
         "watch": "webpack-dev-server --env.development",
-        "release": "npm run build; npm version patch; npm publish"
+        "bump": "npm version patch"
     },
     "repository": {
         "type": "git",
